# metagradient-canary-optimization

./: .gitignore  README.md  pyproject.toml
experiments/: run_audit_dpsgd.py  run_audit_dpsgd_jax.py  run_audit_sgd.py  run_canary_opt.py
scripts/: run_audit_dpsgd.sh  run_audit_dpsgd_jax.sh  run_audit_sgd.sh  run_canary_opt.sh  submit_all.sh
src/algorithms/: __init__.py  canary_opt.py  dp_sgd.py  dp_sgd_jax.py  replay.py
src/auditing/: __init__.py  mahloujifar.py  steinke.py
src/data/: __init__.py  datasets.py
src/models/: __init__.py  resnet9.py  resnet9_jax.py  wrn.py  wrn_jax.py
src/utils/: __init__.py  metrics.py
